<resources>
    <string name="app_name">Čínština</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content"></string>
    <string name="download">Stáhnout</string>
    <string name="download_button">Procházet</string>
    <string name="button_add">Přidej</string>
    <string name="button_edit">Uprav</string>
    <string name="button_del">Smaž</string>
    <string name="textView_prompt_description">Zadejte počáteční pozici</string>
    <string name="button_select_position">Vybrat pozici</string>
    <string name="prochazet">Procházet vše</string>
    <string name="button_prochazet_category">Flashcards</string>
    <string name="menu_word_item_add">Přidat</string>
    <string name="textView_show_czech">Česky</string>
    <string name="textView_show_pinyin">Pinyin</string>
    <string name="textView_show_chinese">Znaky</string>
    <string name="menu_item_del">Smaž</string>
    <string name="menu_item_edit">Uprav</string>
    <string name="button_save">Uložit</string>
    <string name="button_cancel">Zrušit</string>
    <string name="textView_show_category">Kategorie</string>
    <string name="textView_show_id">ID</string>
    <string name="sync_button">Synchronizovat</string>
    <string name="title_activity_sync">SyncActivity</string>
    <string name="btn_do">Nahrát slovíčka</string>
    <string name="start_button_category">Seznam slovíček</string>
    <string name="search_button">Vyhledávání</string>
    <string name="button_play_description">Play</string>
    <string name="tv_detInChinese">tv_detInChinese</string>
    <string name="tv_detInPinyin">tv_detInPinyin</string>
    <string name="tv_detInCzech">tv_detInCzech</string>
    <string name="button_browse">Procházet</string>
    <string name="tv_path">Cesta ke zdroji (URL)</string>
    <string name="et_path">Cesta</string>
    <string name="tv_speed">Rychlost řeči</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_edu_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_edu_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="tv_input">Zadejte text</string>
    <string name="btn_settings">Nastavení</string>
    <string name="app_bar_switch">Náhodně</string>
    <string name="action_search">Hledat</string>
    <string name="action_sync">Synchronizovat</string>
    <string name="action_settings">Nastavení</string>
    <string name="switch_text_off">Vše</string>
    <string name="switch_text_on">Kategorie</string>
    <string name="test">Procvičovat</string>
    <string name="poradi">Třídění</string>
    <string name="category">Kategorie</string>
    <string name="btn_delall">Smazat vše</string>
    <string name="btn_known">Znám</string>
    <string name="btn_unknown">Neznám</string>
    <string name="btn_flashcards">Kartičky</string>
    <string name="btn_categories">Kategorie</string>
    <string name="btn_vocabularies">Slovíčka</string>
    <string name="tv_name">Název</string>
    <string name="categories_list">Seznam</string>
    <string name="categories_words">Přiřadit slovíčka</string>
    <string name="btn_download">Stáhnout</string>
    <string name="btn_download_long">Stáhnout slovíčka</string>
    <string name="txt_zhongwen">中文</string>
    <string name="catword_added">Přiřazená</string>
    <string name="catword_notadded">Nepřiřazená</string>
</resources>
