<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
    tools:context="com.edu.cinstina.WordsListActivity">

        <LinearLayout
            android:id="@+id/linearLayout_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/action_search"
                android:inputType="textPersonName" />

            <ImageView
                android:id="@+id/iv_search"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="top|start"
                android:contentDescription="@string/action_search"
                android:src="@android:drawable/ic_search_category_default" />

            <Switch
                android:id="@+id/switch_category"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:textOff="@string/switch_text_off"
                android:textOn="@string/switch_text_on"
                android:textSize="12sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_list_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="end"
                android:text="@string/textView_show_category"
                android:visibility="gone" />

        </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10sp"
        android:layout_weight="8"
        android:paddingTop="10sp">

        <ListView
            android:id="@+id/lv_words"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clickable="true"
            android:drawSelectorOnTop="false"
            android:focusable="true"
            android:longClickable="true"
            app:layout_constraintTop_toTopOf="parent">


        </ListView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_word"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:clickable="true"
            android:focusable="true"
            android:hapticFeedbackEnabled="true"
            android:onClick="addWord"
            android:src="@android:drawable/ic_input_add"
            app:backgroundTint="@android:color/holo_orange_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
