<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="12">


    <TextView
        android:id="@+id/tv_category_words_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/background_dark"
        android:text="@string/catword_added"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/rv_category_words_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_category_words_in"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/tv_category_words_notin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_category_words_in">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/tv_category_words_notin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/background_dark"
        android:text="@string/catword_notadded"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/rv_category_words_notin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_category_words_in"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_category_words_notin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_categories_words_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_category_words_notin" />

    <Button
        android:id="@+id/btn_categories_words_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_category_words_notin" />

</androidx.constraintlayout.widget.ConstraintLayout>