<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:verticalScrollbarPosition="right">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:elevation="0dp"
            android:isScrollContainer="true"
            android:orientation="vertical"
            android:scrollbars="vertical"
            android:verticalScrollbarPosition="right">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_show_category_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/tv_name"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/et_show_category_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:ems="10"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_show_category_id"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0"
                android:text="@string/textView_show_id"
                android:textSize="8sp"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/et_show_category_id"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="end"
                android:layout_weight="0"
                android:ems="10"
                android:textAlignment="textEnd"
                android:textSize="10sp"
                android:visibility="invisible" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <Button
                android:id="@+id/fab_detail_category_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:clickable="true"
                android:onClick="saveCategory"
                android:text="@string/button_save"
                android:textSize="18sp" />
        </FrameLayout>

    </LinearLayout>

</FrameLayout>