<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_flashcards"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context="com.edu.cinstina.FlashcardActivity">

    <LinearLayout
        android:id="@+id/lin_layout_test"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/tv_test"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:background="@android:color/holo_orange_light"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/test"
            android:textSize="22sp" />

        <Spinner
            android:id="@+id/spinner_flashcards"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:background="@android:color/holo_orange_dark"
            android:gravity="center_vertical|center_horizontal"
            android:hapticFeedbackEnabled="true"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:spinnerMode="dialog" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_layout_category"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/tv_cat_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:background="@android:color/holo_orange_light"
            android:ems="10"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/category"
            android:textSize="22sp" />

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="3"
            android:background="@android:color/holo_orange_dark"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarSize="30dp"
            android:spinnerMode="dialog"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_layout_sort"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/tv_poradi"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:background="@android:color/holo_orange_light"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/poradi"
            android:textSize="22sp" />

        <Spinner
            android:id="@+id/spinner_poradi"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="3"
            android:background="@android:color/holo_orange_dark"
            android:gravity="center_vertical|center_horizontal"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarSize="30dp"
            android:spinnerMode="dialog" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_browse_category"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:onClick="showSwipeActivityCategory"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        android:text="@string/button_prochazet_category"
        android:textSize="24sp"
        tools:text="@string/button_prochazet_category" />


</LinearLayout>
